--- a/app/_layouts/base.html.haml
+++ b/app/_layouts/base.html.haml
@@ -13,10 +13,10 @@
   %meta{:name=>"author", :content=>"Paul Dijou"}
   %meta{:name=>"viewport", :content=>"width=device-width"}
   
-  %link{:rel=>"stylesheet/less", :href=>"/less/style-1.0.0.less"}
+  %link{:rel=>"stylesheet/less", :href=>"#{site.base_url}/less/style-1.0.0.less"}
   
-  %script{:src=>"/js/libs/less-1.3.0.min.js", :type => "text/javascript" }
-  %script{:src=>"/js/libs/modernizr-2.6.1.js", :type => "text/javascript" }
+  %script{:src=>"#{site.base_url}/js/libs/less-1.3.0.min.js", :type => "text/javascript" }
+  %script{:src=>"#{site.base_url}/js/libs/modernizr-2.6.1.js", :type => "text/javascript" }
   
 %body{"data-ng-controller" => "MainCtrl"}
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -26,42 +26,42 @@
   - if(site.profile == "production")
     %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/#{site.jquery_version}/jquery.min.js", :type => "text/javascript" }
     %script
-      window.jQuery || document.write('<script src="/js/libs/jquery-#{site.jquery_version}.min.js" type="text/javascript"><\/script>')
-    %script{:src=>"/js/libs/bootstrap/bootstrap.min.js"}
-    %script{:src=>"/js/libs/angular/angular-#{site.angular_version}.min.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/angular/angular-resource-#{site.angular_version}.min.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/angular/angular-cookies-#{site.angular_version}.min.js", :type => "text/javascript" }
+      window.jQuery || document.write('<script src="#{site.base_url}/js/libs/jquery-#{site.jquery_version}.min.js" type="text/javascript"><\/script>')
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap.min.js"}
+    %script{:src=>"#{site.base_url}/js/libs/angular/angular-#{site.angular_version}.min.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/angular/angular-resource-#{site.angular_version}.min.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/angular/angular-cookies-#{site.angular_version}.min.js", :type => "text/javascript" }
     
   - if(site.profile != "production")
     %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/#{site.jquery_version}/jquery.js", :type => "text/javascript" }
     %script{ :type => "text/javascript" }
       window.jQuery || document.write('<script src="/js/libs/jquery-#{site.jquery_version}.js"><\/script>')
-    %script{:src=>"/js/libs/bootstrap/bootstrap-affix.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-alert.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-button.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-carousel.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-collapse.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-dropdown.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-modal.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-popover.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-scrollspy.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-tab.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-tooltip.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-transition.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/bootstrap/bootstrap-typeahead.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-affix.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-alert.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-button.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-carousel.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-collapse.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-dropdown.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-modal.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-popover.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-scrollspy.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-tab.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-tooltip.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-transition.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-typeahead.js", :type => "text/javascript" }
     
-    %script{:src=>"/js/libs/angular/angular-#{site.angular_version}.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/angular/angular-resource-#{site.angular_version}.js", :type => "text/javascript" }
-    %script{:src=>"/js/libs/angular/angular-cookies-#{site.angular_version}.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/angular/angular-#{site.angular_version}.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/angular/angular-resource-#{site.angular_version}.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/angular/angular-cookies-#{site.angular_version}.js", :type => "text/javascript" }
       
-  %script{:src=>"/js/app.js", :type => "text/javascript" }
-  %script{:src=>"/js/services.js", :type => "text/javascript" }
-  %script{:src=>"/js/controllers.js", :type => "text/javascript" }
-  %script{:src=>"/js/filters.js", :type => "text/javascript" }
-  %script{:src=>"/js/directives.js", :type => "text/javascript" }
+  %script{:src=>"#{site.base_url}/js/app.js", :type => "text/javascript" }
+  %script{:src=>"#{site.base_url}/js/services.js", :type => "text/javascript" }
+  %script{:src=>"#{site.base_url}/js/controllers.js", :type => "text/javascript" }
+  %script{:src=>"#{site.base_url}/js/filters.js", :type => "text/javascript" }
+  %script{:src=>"#{site.base_url}/js/directives.js", :type => "text/javascript" }
 
-  %script{:src=>"/js/plugins.js", :type => "text/javascript" }
-  %script{:src=>"/js/script.js", :type => "text/javascript" }
+  %script{:src=>"#{site.base_url}/js/plugins.js", :type => "text/javascript" }
+  %script{:src=>"#{site.base_url}/js/script.js", :type => "text/javascript" }
   %script
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
