--- a/app/_layouts/base.html.haml
+++ b/app/_layouts/base.html.haml
@@ -13,10 +13,14 @@
   %meta{:name=>"author", :content=>"Paul Dijou"}
   %meta{:name=>"viewport", :content=>"width=device-width"}
   
-  %link{:rel=>"stylesheet/less", :href=>"#{site.base_url}/less/style-1.0.0.less"}
+  - if(site.profile == "production")
+    %link{:rel=>"stylesheet/css", :href=>"#{site.base_url}/css/style-#{site.version}.min.css"}
+    %script{:src=>"#{site.base_url}/js/libs/modernizr-2.6.1.js", :type => "text/javascript" }
   
-  %script{:src=>"#{site.base_url}/js/libs/less-1.3.0.min.js", :type => "text/javascript" }
-  %script{:src=>"#{site.base_url}/js/libs/modernizr-2.6.1.js", :type => "text/javascript" }
+  - if(site.profile != "production")
+    %link{:rel=>"stylesheet/less", :href=>"#{site.base_url}/less/style.less"}
+    %script{:src=>"#{site.base_url}/js/libs/less-1.3.0.min.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/modernizr-2.6.1.js", :type => "text/javascript" }
   
 %body{"data-ng-controller" => "MainCtrl"}
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -31,6 +35,7 @@
     %script{:src=>"#{site.base_url}/js/libs/angular/angular-#{site.angular_version}.min.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/angular/angular-resource-#{site.angular_version}.min.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/angular/angular-cookies-#{site.angular_version}.min.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/scripts-#{site.version}.min.js"}
     
   - if(site.profile != "production")
     %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/#{site.jquery_version}/jquery.js", :type => "text/javascript" }
@@ -43,10 +48,10 @@
     %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-collapse.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-dropdown.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-modal.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-tooltip.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-popover.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-scrollspy.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-tab.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-tooltip.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-transition.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-typeahead.js", :type => "text/javascript" }
     
@@ -54,14 +59,15 @@
     %script{:src=>"#{site.base_url}/js/libs/angular/angular-resource-#{site.angular_version}.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/angular/angular-cookies-#{site.angular_version}.js", :type => "text/javascript" }
       
-  %script{:src=>"#{site.base_url}/js/app.js", :type => "text/javascript" }
-  %script{:src=>"#{site.base_url}/js/services.js", :type => "text/javascript" }
-  %script{:src=>"#{site.base_url}/js/controllers.js", :type => "text/javascript" }
-  %script{:src=>"#{site.base_url}/js/filters.js", :type => "text/javascript" }
-  %script{:src=>"#{site.base_url}/js/directives.js", :type => "text/javascript" }
-
-  %script{:src=>"#{site.base_url}/js/plugins.js", :type => "text/javascript" }
-  %script{:src=>"#{site.base_url}/js/script.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/app-#{site.version}.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/services-#{site.version}.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/controllers-#{site.version}.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/filters-#{site.version}.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/directives-#{site.version}.js", :type => "text/javascript" }
+  
+    %script{:src=>"#{site.base_url}/js/plugins-#{site.version}.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/script-#{site.version}.js", :type => "text/javascript" }
+    
   %script
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
