--- a/app/_layouts/base.html.haml
+++ b/app/_layouts/base.html.haml
@@ -15,12 +15,12 @@
   
   - if(site.profile == "production")
     %link{:rel=>"stylesheet/css", :href=>"#{site.base_url}/css/style-#{site.version}.min.css"}
-    %script{:src=>"#{site.base_url}/js/libs/modernizr-2.6.1.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/modernizr/modernizr-#{site.versions.modernizr}.js", :type => "text/javascript" }
   
   - if(site.profile != "production")
     %link{:rel=>"stylesheet/less", :href=>"#{site.base_url}/less/style.less"}
-    %script{:src=>"#{site.base_url}/js/libs/less-1.3.0.min.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/modernizr-2.6.1.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/less/less-#{site.versions.less}.min.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/modernizr/modernizr-#{site.versions.modernizr}.js", :type => "text/javascript" }
   
 %body{"data-ng-controller" => "MainCtrl"}
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -28,36 +28,19 @@
   ~ content
 
   - if(site.profile == "production")
-    %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/#{site.jquery_version}/jquery.min.js", :type => "text/javascript" }
+    %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/#{site.versions.jquery}/jquery.min.js", :type => "text/javascript" }
     %script
-      window.jQuery || document.write('<script src="#{site.base_url}/js/libs/jquery-#{site.jquery_version}.min.js" type="text/javascript"><\/script>')
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap.min.js"}
-    %script{:src=>"#{site.base_url}/js/libs/angular/angular-#{site.angular_version}.min.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/angular/angular-resource-#{site.angular_version}.min.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/angular/angular-cookies-#{site.angular_version}.min.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/scripts-#{site.version}.min.js"}
+      window.jQuery || document.write('<script src="#{site.base_url}/js/libs/jquery/jquery-#{site.versions.jquery}.min.js" type="text/javascript"><\/script>')
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-#{site.versions.bootstrap}.min.js"}
+    %script{:src=>"#{site.base_url}/js/libs/angular/angular-#{site.versions.angular}.min.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/main-#{site.version}.min.js"}
     
   - if(site.profile != "production")
-    %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/#{site.jquery_version}/jquery.js", :type => "text/javascript" }
+    %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/#{site.versions.jquery}/jquery.js", :type => "text/javascript" }
     %script{ :type => "text/javascript" }
-      window.jQuery || document.write('<script src="/js/libs/jquery-#{site.jquery_version}.js"><\/script>')
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-affix.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-alert.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-button.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-carousel.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-collapse.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-dropdown.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-modal.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-tooltip.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-popover.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-scrollspy.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-tab.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-transition.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-typeahead.js", :type => "text/javascript" }
-    
-    %script{:src=>"#{site.base_url}/js/libs/angular/angular-#{site.angular_version}.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/angular/angular-resource-#{site.angular_version}.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/libs/angular/angular-cookies-#{site.angular_version}.js", :type => "text/javascript" }
+      window.jQuery || document.write('<script src="/js/libs/jquery/jquery-#{site.versions.jquery}.js"><\/script>')
+    %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-#{site.versions.bootstrap}.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/angular/angular-#{site.versions.angular}.js", :type => "text/javascript" }
       
     %script{:src=>"#{site.base_url}/js/app-#{site.version}.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/services-#{site.version}.js", :type => "text/javascript" }
@@ -66,7 +49,7 @@
     %script{:src=>"#{site.base_url}/js/directives-#{site.version}.js", :type => "text/javascript" }
   
     %script{:src=>"#{site.base_url}/js/plugins-#{site.version}.js", :type => "text/javascript" }
-    %script{:src=>"#{site.base_url}/js/script-#{site.version}.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/scripts-#{site.version}.js", :type => "text/javascript" }
     
   %script
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
