--- a/app/_layouts/base.html.haml
+++ b/app/_layouts/base.html.haml
@@ -1,8 +1,8 @@
 !!!
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en" data-ng-app="jege"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en" data-ng-app="jege"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en" data-ng-app="jege"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en" data-ng-app="jege"> <!--<![endif]-->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en" data-ng-app="jege" data-ng-controller="AppCtrl"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en" data-ng-app="jege" data-ng-controller="AppCtrl"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en" data-ng-app="jege" data-ng-controller="AppCtrl"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en" data-ng-app="jege" data-ng-controller="AppCtrl"> <!--<![endif]-->
 
 %head
   %meta{:charset=>"utf-8"}
@@ -22,7 +22,7 @@
     %script{:src=>"#{site.base_url}/js/libs/less/less-#{site.versions.less}.min.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/modernizr/modernizr-#{site.versions.modernizr}.js", :type => "text/javascript" }
   
-%body{"data-ng-controller" => "MainCtrl"}
+%body
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   
   ~ content
