--- a/app/_partials/navbar.html.haml
+++ b/app/_partials/navbar.html.haml
@@ -15,13 +15,13 @@
               %a{:href=>"#{site.base_url}"} Home
               
           %ul.nav.pull-right
-            %li.logged-out
+            %li{"data-ng-hide" => "isLoggedIn()"}
               %a{ :href => "#{site.base_url}/public/user/inscription" } Inscription
-            %li.logged-out
+            %li{"data-ng-hide" => "isLoggedIn()"}
               %a{ :href => "#", :data => { :toggle => "modal", :target => "#signinModal" } } Sign in
-            %li.dropdown.logged-in
+            %li.dropdown{"data-ng-show" => "isLoggedIn()"}
               %a.dropdown-toggle{ :href => "#", "data-toggle" => "dropdown" }
-                You
+                Me
                 %b.caret
               %ul.dropdown-menu
                 %li
