--- a/app/_partials/signin.html.haml
+++ b/app/_partials/signin.html.haml
@@ -3,18 +3,19 @@
     %button.close{ :type => "button", "data-dismiss" => "modal" } &times;
     %h3 Sign in
   
-  .modal-body
-    .form-horizontal
+  %form#formSignin.form-horizontal
+    .modal-body
       .control-group
         %label.control-label{ :for => "inputSigninUsername" } Username
         .controls
-          %input#inputSigninUsername{:type => "text", :placeholder => "Username", "data-ng-model" => "credentials.username"}
+          %input#inputSigninUsername.focus{:type => "text", :placeholder => "Username", "data-ng-model" => "credentials.username"}
       
       .control-group
         %label.control-label{ :for => "inputSigninPassword" } Password
         .controls
           %input#inputSigninPassword{:type => "password", :placeholder => "Password", "data-ng-model" => "credentials.password"}
   
-  .modal-footer
-    %button.btn{ :type => "button", "data-dismiss" => "modal" } Cancel
-    %button.btn.btn-primary{ :type => "button", "data-ng-click" => "signin()" } Sign in
+    .modal-footer
+      %button.btn{ :type => "button", "data-dismiss" => "modal" } Cancel
+      %button.btn.btn-primary.default{ :type => "button", "data-ng-click" => "signin()" } Sign in
+ 
