New way to handle messages from the response

--- a/app/_layouts/fluid.html.haml
+++ b/app/_layouts/fluid.html.haml
@@ -2,4 +2,8 @@
 layout: common
 ---
 .container-fluid
+  = partial( 'globalChannel.html.haml' )
+
   ~ content
+  
+  = partial( 'debug.html.haml' )
