--- a/app/_layouts/base.html.haml
+++ b/app/_layouts/base.html.haml
@@ -19,7 +19,7 @@
   
   - if(site.profile != "production")
     %link{:rel=>"stylesheet/less", :href=>"#{site.base_url}/less/style.less"}
-    %script{:src=>"#{site.base_url}/js/libs/less/less-#{site.versions.less}.min.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/less/less-#{site.versions.less}.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/modernizr/modernizr-#{site.versions.modernizr}.js", :type => "text/javascript" }
   
 %body
@@ -33,6 +33,8 @@
       window.jQuery || document.write('<script src="#{site.base_url}/js/libs/jquery/jquery-#{site.versions.jquery}.min.js" type="text/javascript"><\/script>')
     %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-#{site.versions.bootstrap}.min.js"}
     %script{:src=>"#{site.base_url}/js/libs/angular/angular-#{site.versions.angular}.min.js", :type => "text/javascript" }
+    %script{:src=>"#{site.base_url}/js/libs/noty/noty-#{site.versions.noty}.min.js", :type => "text/javascript" }
+    %script{:src=>"https://login.persona.org/include.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/main-#{site.version}.min.js"}
     
   - if(site.profile != "production")
@@ -41,7 +43,9 @@
       window.jQuery || document.write('<script src="/js/libs/jquery/jquery-#{site.versions.jquery}.js"><\/script>')
     %script{:src=>"#{site.base_url}/js/libs/bootstrap/bootstrap-#{site.versions.bootstrap}.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/libs/angular/angular-#{site.versions.angular}.js", :type => "text/javascript" }
-      
+    %script{:src=>"#{site.base_url}/js/libs/noty/noty-#{site.versions.noty}.js", :type => "text/javascript" }
+    %script{:src=>"https://login.persona.org/include.js", :type => "text/javascript" }  
+    
     %script{:src=>"#{site.base_url}/js/app-#{site.version}.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/services-#{site.version}.js", :type => "text/javascript" }
     %script{:src=>"#{site.base_url}/js/controllers-#{site.version}.js", :type => "text/javascript" }
