--- a/app/_partials/debug.html.haml
+++ b/app/_partials/debug.html.haml
@@ -1,3 +1,3 @@
 - if site.debug
   #debug
-    #debugChannel{:data => {"channel-name" => "debug" } }
+    #debugChannel{:data => {"channel-type" => "debug" } }
